--- a/ProductivityTracker.css
+++ b/ProductivityTracker.css
@@ -1,33 +1,5 @@
-/*
-#THeader{
-    text-align: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
-  .nav-bar {
-    list-style-type: none;
-    overflow: hidden;
-    background-color: #333;
-    float: center;
-  }
-  
 
-  li a{
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-  }
-  
-  .nav-bar:hover{
-    background-color: Cyan;
-    color:black;
-  }
-*/
-  
-
+/*Dark Mode Button*/
   .button-66 {
     background-color: #0a6bff;
     border-radius: 4px;
@@ -37,7 +9,7 @@
     color: #fff;
     cursor: pointer;
     display: inherit;
-    font-family: "Space Grotesk",-apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-family: Poppins;
     font-size: 18px;
     font-weight: 700;
     line-height: 24px;
@@ -61,126 +33,10 @@
     transform: translateY(-2px);
   }
   
-
-  
-  
-
-  /* Include the padding and border in an element's total width and height */
-* {
-  box-sizing: border-box;
-}
-
 html{
   font-family:Poppins;
 }
     
-
-/*
-
-
-#myUL li {
-  cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
-  background: #eee;
-  font-size: 18px;
-  transition: 0.2s;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-
-#myUL li:nth-child(odd) {
-  background: #f9f9f9;
-}
-
-
-#myUL  li:hover {
-  background: #ddd;
-}
-
-
-#myUL  li.checked {
-  background: #888;
-  color: #fff;
-  text-decoration: line-through;
-}
-
-
-#myUL  li.checked::before {
-  content: '';
-  position: absolute;
-  border-color: #fff;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  top: 10px;
-  left: 16px;
-  transform: rotate(45deg);
-  height: 15px;
-  width: 7px;
-}
-
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
-}
-
-.close:hover {
-  background-color: #f44336;
-  color: white;
-}
-
-
-.header {
-  background-color: rgb(10, 205, 219);
-  padding: 30px 40px;
-  color: white;
-  text-align: center;
-}
-
-
-.header:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-
-input {
-  margin: 0;
-  border: none;
-  border-radius: 4;
-  width: 75%;
-  padding: 10px;
-  float: left;
-  font-size: 16px;
-}
-
-
-.addBtn {
-  padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s;
-  border-radius: 0;
-}
-
-.addBtn:hover {
-  background-color: #bbb;
-}
-
-*/
- 
 
 /* NAVIGATION */
 
@@ -229,6 +85,7 @@ h2:hover{
 }
 
 .PageHeadings{
+  margin-top:40px;
   text-align: center;
 }
 
@@ -671,4 +528,209 @@ body {
 .CalendarParagraph{
   color:white;
   text-align: center;
+}
+
+
+
+
+
+/* Standard To-Do List CSS */
+/* Include the padding and border in an element's total width and height */
+* {
+  box-sizing: border-box;
+}
+
+#myDIV{
+  margin-top: 100px;
+}
+
+/* Remove margins and padding from the list */
+#myUL{
+  margin: 0;
+  padding: 0;
+}
+
+/* Style the list items */
+#myUL li {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #eee;
+  font-size: 18px;
+  transition: 0.2s;
+
+  /* make the list items unselectable */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  margin-left:auto;
+  margin-right:auto; 
+
+  width: 1000px;
+
+
+}
+
+/* Set all odd list items to a different color (zebra-stripes) */
+#myUL li:nth-child(odd) {
+  background: black;
+  color: white;
+  border:3px solid black;
+}
+
+#myUL li:nth-child(even) {
+  background: white;
+  color: black;
+  border:3px solid white;
+}
+/* Darker background-color on hover */
+#myUL li:hover {
+  background: beige;
+  color:black; 
+  border:3px solid black;
+  
+}
+
+/* When clicked on, add a background color and strike out text */
+#myUL li.checked {
+  background: #888;
+  color: #fff;
+  text-decoration: line-through;
+}
+
+/* Add a "checked" mark when clicked on */
+#myUL li.checked::before {
+  content: '';
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+/* Style the close button */
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+  background-color: #f44336;
+  color: white;
+  
+}
+
+/* Style the header */
+.header {
+  background-color: #f44336;
+  padding: 30px 40px;
+  color: white;
+  text-align: center;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  border:3px solid black;
+  
+    margin-left:auto;
+    margin-right:auto; 
+    width: 1000px;
+}
+
+/* Clear floats after the header */
+.header:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the input */
+input {
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 75%;
+  padding: 10px;
+  float: left;
+  font-size: 16px;
+}
+
+/* Style the "Add" button */
+.addBtn {
+  padding: 10px;
+  width: 500px;
+  background: greenyellow;
+  color: black;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 5px;
+  border:3px solid black;
+}
+
+.addBtn:hover {
+  background-color: #bbb;
+}
+
+
+
+/*About the Creator*/
+
+
+.column {
+
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+    
+  }
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  padding: 0 16px;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
 }
